manifests/jarvis/openwebui/openwebui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui-service
  namespace: jarvis
spec:
  type: NodePort
  selector:
    app: openwebui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30016
