manifests/jarvis/openwebui/openwebui-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui-ingressroute
  namespace: jarvis
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`chat.janikhenz.ch`)
      kind: Rule
      services:
        - name: openwebui-service
          port: 8080
